--- a/images/bowtie2+samtools/Dockerfile
+++ b/images/bowtie2+samtools/Dockerfile
@@ -18,5 +18,6 @@ RUN wget $URL/$ZIP -O $DST/$ZIP && \
 RUN conda install -c bioconda samtools
 RUN conda install -c bioconda lofreq
 RUN conda install -c bioconda bcftools
+RUN conda install -c bioconda bwa
 
 WORKDIR /data
