--- a/images/vcf_to_consensus/Dockerfile
+++ b/images/vcf_to_consensus/Dockerfile
@@ -2,3 +2,4 @@ FROM python
 RUN apt-get update
 RUN apt-get install -y tabix
 RUN pip install pysam
+COPY ./vcf_to_consensus.py /vcf_to_consensus.py
