--- a/env.yaml
+++ b/env.yaml
@@ -3,16 +3,17 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - procps-ng # nf-tower
-  - gxx       # nf-tower
-  - wget
+  - procps-ng=3.3.17 # nf-tower
+#  - gxx       # nf-tower
+  - wget=1.20.3
   - python=3.7
   - bwa=0.7.17
   - samtools=1.10-0
   - bcftools=1.10-2
   - lofreq
-  - snpeff=4.3
-  - fastqc=0.11.9
+#  - snpeff=4.3
+  - snpeff=5.0
   - trimmomatic=0.39
-  - pysam
+  - pysam=0.16.0.1
+  - xmltodict=0.12.0
 
