python3: can't open file '/vcf_to_consensus.py': [Errno 2] No such file or directory

--- a/env.yaml
+++ b/env.yaml
@@ -4,15 +4,13 @@ channels:
   - bioconda
 dependencies:
   - procps-ng=3.3.17 # nf-tower
-#  - gxx       # nf-tower
   - wget=1.20.3
   - python=3.7
   - bwa=0.7.17
   - samtools=1.10-0
   - bcftools=1.10-2
-  - lofreq
-#  - snpeff=4.3
-  - snpeff=5.0
+  - lofreq=2.1.5
+  - snpeff=5.0e
   - trimmomatic=0.39
   - pysam=0.16.0.1
   - xmltodict=0.12.0
