--- a/env.yaml
+++ b/env.yaml
@@ -10,8 +10,9 @@ dependencies:
   - samtools=1.10-0
   - bcftools=1.10-2
   - lofreq=2.1.5
-  - snpeff=5.0e
+  - snpeff=5.0
   - trimmomatic=0.39
   - pysam=0.16.0.1
   - xmltodict=0.12.0
+  - requests=2.27.1
 
