Update pipeline versions to V2.

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -57,7 +57,7 @@ profiles {
             location = 'europe-west4'
             region = 'europe-west4'
             project = 'prj-int-dev-covid19-nf-gls'
-            enableRequesterPaysBuckets = 'true'
+            enableRequesterPaysBuckets = 'false'
         }
         tower {
             endpoint = 'https://tower.nf'
