Update pipeline versions to V2.

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -5,8 +5,8 @@ profiles {
             NXF_DEBUG = '0'
         }
         params {
-            SARS2_FA = ''
-            SARS2_FA_FAI = ''
+            SARS2_FA = "./refgnm/NC_045512.2.fa"
+            SARS2_FA_FAI = "./refgnm/NC_045512.2.fa.fai"
             SECRETS = ''
         }
         cleanup = true
