Update pipeline versions to V2.

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -4,11 +4,11 @@ profiles {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
         }
-        params {
-            SARS2_FA = "./refgnm/NC_045512.2.fa"
-            SARS2_FA_FAI = "./refgnm/NC_045512.2.fa.fai"
-            SECRETS = ''
-        }
+//        params {
+//            SARS2_FA = "./refgnm/NC_045512.2.fa"
+//            SARS2_FA_FAI = "./refgnm/NC_045512.2.fa.fai"
+//            SECRETS = ''
+//        }
         cleanup = true
         singularity {
             enabled = true
@@ -30,11 +30,11 @@ profiles {
         }
     }
     gls {
-        params {
-            SARS2_FA = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa"
-            SARS2_FA_FAI = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa.fai"
-            SECRETS = "gs://prj-int-dev-covid19-nf-gls/data/projects_accounts.csv"
-        }
+//        params {
+//            SARS2_FA = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa"
+//            SARS2_FA_FAI = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa.fai"
+//            SECRETS = "gs://prj-int-dev-covid19-nf-gls/data/projects_accounts.csv"
+//        }
         env {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
