--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -9,7 +9,7 @@ profiles {
 //            SARS2_FA_FAI = '../data/NC_045512.2.fa.fai'
 //            SECRETS = '../data/projects_accounts.csv'
 //        }
-        cleanup = false
+//        cleanup = false
         singularity {
             enabled = true
             cacheDir = '/nfs/production/cochrane/ena/temp/nextflow/singularity'
