Default to production queue for Nextflow processes.

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -18,6 +18,7 @@ profiles {
             executor = 'lsf'
             container = 'docker://quay.io/nextflow/bash'
             errorStrategy = 'ignore'
+            queue = 'production'
         }
         executor {
             time = '1h'
