Attempt 10K runs per batch.

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -21,7 +21,9 @@ profiles {
             queue = 'production'
         }
         executor {
-            time = '1h'
+            queueSize = '100'
+            submitRateLimit = '2000 second'
+            time = '10h'
 //            clusterOptions =
 //            perJobMemLimit =
 //            queue = ''
