--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -24,6 +24,7 @@ profiles {
             queueSize = '10'
             submitRateLimit = '2000 second'
             time = '1h'
+            scratch = 'true'
 //            clusterOptions =
 //            perJobMemLimit =
 //            queue = ''
