--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -1,7 +1,7 @@
 profiles {
     codon {
         env {
-            NXF_OPTS = '-Xms500m'       // '-Xmx500m'
+            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
             NXF_DEBUG = '0'
         }
 //        params {
