--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -82,4 +82,39 @@ profiles {
         //     overwrite = 'true'
         // }
     }
+    slurm {
+//        env {
+//            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
+//            NXF_DEBUG = '0'
+//        }
+        cleanup = true
+        singularity {
+            enabled = true
+            cacheDir = "/project/${PROJECT_ID}/singularity"
+        }
+        process {
+            executor = 'slurm'
+            process.clusterOptions = "--account=${PROJECT_ID} --ntasks-per-node=1 --cpus-per-task=4 --ntasks=1 --time=00:05:00"
+            containerOptions = "-B /project/${PROJECT_ID}:/project/${PROJECT_ID},/pfs/lustrep4/projappl/${PROJECT_ID}:/pfs/lustrep4/projappl/${PROJECT_ID}"
+            errorStrategy = 'terminate' // ignore
+            queue = 'standard'
+            withName:map_to_reference {
+               container = "/project/${PROJECT_ID}/singularity/ena-sars-cov2-illumina_2.0.img"
+            }
+            withName:ena_analysis_submit {
+                container="/project/${PROJECT_ID}/singularity/ena-analysis-submitter_2.0.img"
+            }
+        }
+        executor {
+            queueSize = '5' //'100'
+            submitRateLimit = '2000 second'
+            time = '1h'
+//            clusterOptions =
+//            perJobMemLimit =
+//            queue = ''
+        }
+        tower {
+            endpoint = 'https://tower.nf'
+        }
+    }
 }
