--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -34,9 +34,9 @@ profiles {
     }
     gls {
         params {
-            SARS2_FA = "gs://prj-int-dev-covid19-nf-gls-poc/data/NC_045512.2.fa" //For POC project
-            SARS2_FA_FAI = "gs://prj-int-dev-covid19-nf-gls-poc/data/NC_045512.2.fa.fai" //For POC project
-            SECRETS = "gs://prj-int-dev-covid19-nf-gls-poc/data/projects_accounts.csv" //For POC project
+            SARS2_FA = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa" 
+            SARS2_FA_FAI = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa.fai"
+            SECRETS = "gs://prj-int-dev-covid19-nf-gls/data/projects_accounts.csv"
         }
         env {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
@@ -46,7 +46,7 @@ profiles {
             executor = 'google-lifesciences'
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
-            errorStrategy = 'ignore' //'ignore' 'terminate'
+            errorStrategy = 'ignore'
         }
         executor {
             queueSize = '4'
@@ -57,9 +57,9 @@ profiles {
                 preemptible = 'true'
                 //usePrivateAddress = 'false'     // public IP is required unless everything is on GCP
             }
-            location = 'europe-west2'       // 'europe-west4'
-            region = 'europe-west2'      // 'europe-west4'
-            project = 'prj-int-dev-ena-nft-poc-368211' // Match with projectID in nextflow-service-account-private-key.json //'prj-int-dev-covid19-nf-gls'
+            location = 'europe-west4' 
+            region = 'europe-west4'
+            project = 'prj-int-dev-covid19-nf-gls'
 //            enableRequesterPaysBuckets = 'false'
         }
         tower {
