--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -29,7 +29,8 @@ profiles {
 //            queue = ''
         }
         tower {
-            endpoint = 'https://tower.nf'
+            workspaceId = '199373255459700' // TOWER Workspace ID for POC
+//            endpoint = 'https://tower.nf'
         }
     }
     gls {
