add slurm start script

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -83,4 +83,45 @@ profiles {
         //     overwrite = 'true'
         // }
     }
+    slurm {
+//        env {
+//            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
+//            NXF_DEBUG = '0'
+//        }
+//        params {
+//            SARS2_FA = '../data/NC_045512.2.fa'
+//            SARS2_FA_FAI = '../data/NC_045512.2.fa.fai'
+//            SECRETS = '../data/projects_accounts.csv'
+//        }
+        cleanup = true
+        singularity {
+            enabled = true
+            cacheDir = '/tmp/nextflow/singularity'
+        }
+        process {
+            executor = 'slurm'
+            time = '1h'
+            container = 'docker://quay.io/nextflow/bash'
+            errorStrategy = 'terminate' // ignore
+            queue = 'standard'
+            withName: map_to_reference { 
+                container = '/homes/yanisasunt/projects/covid-sequence-analysis-workflow/nextflow/davidyuyuan-ena-sars-cov2-illumina-2.0.img' 
+            }
+            withName: ena_analysis_submit { 
+                memory = '2 GB'
+                container = '/homes/yanisasunt/projects/covid-sequence-analysis-workflow/nextflow/sands0-ena-analysis-submitter-2.3.img' 
+            }
+        }
+        executor {
+            queueSize = '5' //'100'
+            submitRateLimit = '2000 second'
+//            time = '1h'
+//            clusterOptions =
+//            perJobMemLimit =
+//            queue = ''
+        }
+//        tower {
+//            endpoint = 'https://api.tower.nf'
+//        }
+    }
 }
