change config to ignore error

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -92,7 +92,7 @@ profiles {
         process {
             executor = 'slurm'
             container = 'docker://quay.io/nextflow/bash'
-            errorStrategy = 'terminate' // ignore,terminate
+            errorStrategy = 'ignore' // ignore,terminate
             queue = 'standard'
             withName: map_to_reference { 
                 memory = '8 GB' //2
