add time to slurm job config

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -91,6 +91,7 @@ profiles {
         }
         process {
             executor = 'slurm'
+            time = '24h'
             container = 'docker://quay.io/nextflow/bash'
             errorStrategy = 'ignore' // ignore,terminate
             queue = 'standard'
