add test codon-slurm

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -91,20 +91,21 @@ profiles {
         }
         process {
             executor = 'slurm'
-            time = '24h'
+            clusterOptions = "--partition=short --cpus-per-task=16 --time=00:30:00"
             container = 'docker://quay.io/nextflow/bash'
             errorStrategy = 'ignore' // ignore,terminate
             queue = 'standard'
             withName: map_to_reference { 
-                memory = '8 GB' //2
-                cpus = 8
+                memory = '8 GB'
+                cpus = 16
             }
             withName: ena_analysis_submit { 
                 memory = '8 GB'
+                cpus = 16
             }
         }
         executor {
-            queueSize = '5' //'100'
+            queueSize = '100' //'100'
             submitRateLimit = '2000 second'
         }
     }
