--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -91,10 +91,10 @@ profiles {
         }
         process {
             executor = 'slurm'
-            clusterOptions = "--partition=short --cpus-per-task=16 --time=00:30:00"
+            clusterOptions = "--cpus-per-task=16 --time=00:30:00"
             container = 'docker://quay.io/nextflow/bash'
             errorStrategy = 'ignore' // ignore,terminate
-            queue = 'standard'
+            queue = 'short'
             withName: map_to_reference { 
                 memory = '8 GB'
                 cpus = 16
