--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -94,10 +94,10 @@ profiles {
             clusterOptions = "--cpus-per-task=16 --time=01:00:00"
             container = 'docker://quay.io/nextflow/bash'
             errorStrategy = 'ignore' // ignore,terminate
-            queue = 'short'
+            queue = 'standard'
             withName: map_to_reference { 
                 memory = '8 GB'
-                cpus = 16
+                cpus = 32
             }
             withName: ena_analysis_submit { 
                 memory = '8 GB'
