update slurm array script

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -83,10 +83,6 @@ profiles {
         // }
     }
     slurm {
-//        env {
-//            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
-//            NXF_DEBUG = '0'
-//        }
         cleanup = true
         singularity {
             enabled = true
@@ -94,27 +90,22 @@ profiles {
         }
         process {
             executor = 'slurm'
-            process.clusterOptions = "--account=${PROJECT_ID} --ntasks-per-node=1 --cpus-per-task=4 --ntasks=1 --time=00:05:00"
-            containerOptions = "-B /project/${PROJECT_ID}:/project/${PROJECT_ID},/pfs/lustrep4/projappl/${PROJECT_ID}:/pfs/lustrep4/projappl/${PROJECT_ID}"
-            errorStrategy = 'terminate' // ignore
-            queue = 'standard'
+            process.clusterOptions = "--account=${PROJECT_ID} --cpus-per-task=16 --time=01:00:00"
+            containerOptions = "-B /scratch/${PROJECT_ID}:/scratch/${PROJECT_ID},/project/${PROJECT_ID}:/project/${PROJECT_ID},/pfs/lustrep4/projappl/${PROJECT_ID}:/pfs/lustrep4/projappl/${PROJECT_ID},/pfs/lustrep4/scratch/${PROJECT_ID}:/pfs/lustrep4/scratch/${PROJECT_ID}"
+            errorStrategy = 'ignore' // ignore,terminate
+            queue = 'small'
             withName:map_to_reference {
-               container = "/project/${PROJECT_ID}/singularity/ena-sars-cov2-illumina_2.0.img"
-            }
+                cpus = 16
+           }
             withName:ena_analysis_submit {
-                container="/project/${PROJECT_ID}/singularity/ena-analysis-submitter_2.0.img"
+//                container="/project/${PROJECT_ID}/singularity/ena-analysis-submitter_2.3.img"
+                cpus = 16
             }
         }
         executor {
-            queueSize = '5' //'100'
+            queueSize = '40' //20,100
             submitRateLimit = '2000 second'
-            time = '1h'
-//            clusterOptions =
-//            perJobMemLimit =
-//            queue = ''
-        }
-        tower {
-            endpoint = 'https://tower.nf'
+//          time = '1h'
         }
     }
 }
