--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -103,9 +103,34 @@ profiles {
             }
         }
         executor {
-            queueSize = '40' //20,100
+            queueSize = '40' //20,40,100
             submitRateLimit = '2000 second'
 //          time = '1h'
+        }
+    }
+    hq {
+        cleanup = true
+        singularity {
+            enabled = true
+            cacheDir = "/project/${PROJECT_ID}/singularity"
+        }
+        process {
+            executor = 'hq'
+            containerOptions = "-B /scratch/${PROJECT_ID}:/scratch/${PROJECT_ID},/project/${PROJECT_ID}:/project/${PROJECT_ID},/pfs/lustrep4/projappl/${PROJECT_ID}:/pfs/lustrep4/projappl/${PROJECT_ID},/pfs/lustrep4/scratch/${PROJECT_ID}:/pfs/lustrep4/scratch/${PROJECT_ID}"
+            errorStrategy = 'ignore' // ignore,terminate
+            queue = 'small'
+            withName:map_to_reference {
+                cpus = 16
+           }
+            withName:ena_analysis_submit {
+                cpus = 16
+            }
+        }
+        executor {
+            name = 'hq'
+            queueSize = 200 //100*SLURM_NNODES
+            cpus = 64 //16*SLURM_NODES
+            submitRateLimit = '2000 second'
         }
     }
 }
