add aws batch script

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -83,4 +83,28 @@ profiles {
         //     overwrite = 'true'
         // }
     }
+    awsbatch {
+        env {
+            NXF_OPTS = '-Xms500m'       // '-Xmx500m'
+            NXF_DEBUG = '0'
+        }
+        process {
+            executor = 'awsbatch'
+            queue = 'test-job-queue'
+            container = 'quay.io/nextflow/bash'
+            disk = '10 GB'
+            errorStrategy = 'ignore'
+        }
+        executor {
+            queueSize = '50'
+            submitRateLimit = '2000 second'
+        }
+        aws {
+            batch {
+                // NOTE: this setting is only required if the AWS CLI tool is installed in a custom AMI
+                cliPath = '/home/ec2-user/miniconda/bin/aws' // Need to (manually) create custom AMI first to access this folder 
+            }
+            region = 'eu-west-2'
+        }
+    }
 }
