--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -90,10 +90,10 @@ profiles {
         }
         process {
             executor = 'awsbatch'
-            queue = 'worker_queue' // Get job queue from TF or AWS console
+            queue = 'test-job-queue' // Get job queue from TF or AWS console
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
-            errorStrategy = 'ignore'
+            errorStrategy = 'terminate'
         }
         executor {
             queueSize = '50'
