--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -93,7 +93,7 @@ profiles {
             queue = 'test-job-queue' // Get job queue from TF or AWS console
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
-            errorStrategy = 'terminate'
+            errorStrategy = 'ignore'
         }
         executor {
             queueSize = '50'
