--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -90,7 +90,7 @@ profiles {
         }
         process {
             executor = 'awsbatch'
-            queue = 'test-job-queue' // Get job queue from TF or AWS console
+            queue = 'worker_queue' // Get job queue from TF or AWS console
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
             errorStrategy = 'ignore'
