Update memory for gls profile

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -40,7 +40,7 @@ profiles {
             SECRETS = "gs://prj-int-dev-covid19-nf-gls/data/projects_accounts.csv"
         }
         env {
-            NXF_OPTS = '-Xms500m'       // '-Xmx500m'
+            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
             NXF_DEBUG = '0'
         }
         process {
