add nf tower workspace id

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -106,5 +106,8 @@ profiles {
             }
             region = 'eu-west-2'
         }
+        tower {
+            workspaceId = '14189190921825'
+        }
     }
 }
