--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -98,6 +98,7 @@ profiles {
         executor {
             queueSize = '30'
             submitRateLimit = '2000 second'
+            time = '1h'
         }
         aws {
             batch {
