change workspace id and process spec

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -94,6 +94,14 @@ profiles {
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
             errorStrategy = 'ignore'
+            withName:map_to_reference {
+                cpus = 8
+                memory = '8 GB'
+            }
+            withName:ena_analysis_submit {
+                cpus = 2
+                memory = '2 GB'
+            }
         }
         executor {
             queueSize = '100'
@@ -108,7 +116,7 @@ profiles {
             region = 'eu-west-2'
         }
         tower {
-            workspaceId = '14189190921825'
+            workspaceId = '236739176715692'
         }
     }
 }
