update nextflow tower config

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -117,6 +117,7 @@ profiles {
         }
         tower {
             workspaceId = '236739176715692'
+            label = "awsbatch"
         }
     }
 }
