add label to tower

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -117,7 +117,8 @@ profiles {
         }
         tower {
             workspaceId = '236739176715692'
-            label = "awsbatch"
+            enabled = true
+            labels = ['aws_batch']
         }
     }
 }
