scope down ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 data/projects_accounts.csv
 .nextflow
 *.log
-data/*/
+data/*/illumina_to_be_processed_*.tsv
+data/*/nanopore_to_be_processed_*.tsv
 secrets/
