--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -93,7 +93,7 @@ profiles {
             queue = 'worker_queue' // Get job queue from TF or AWS console
             container = 'quay.io/nextflow/bash'
             disk = '10 GB'
-            errorStrategy = 'ignore'
+            errorStrategy = 'terminate'
             withName:map_to_reference {
                 cpus = 2
                 memory = '8 GB'
