refactor illumina script and add sentry

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -87,6 +87,7 @@ profiles {
         env {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
+            SENTRY_URL = "$SENTRY_URL"
         }
         process {
             executor = 'awsbatch'
