--- a/illumina/env.yaml
+++ b/illumina/env.yaml
@@ -8,6 +8,7 @@ dependencies:
   - python=3.7
   - bwa=0.7.17
   - samtools=1.10-0
+  - sentry-sdk=1.21.0
   - bcftools=1.10-2
   - lofreq=2.1.5
   - snpeff=5.0
