edit job submission config

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -112,25 +112,26 @@ profiles {
         cleanup = true
         singularity {
             enabled = true
-            cacheDir = "/project/${PROJECT_ID}/singularity"
+            cacheDir = "/project/project_465000191/singularity"
         }
         process {
             executor = 'hq'
-            containerOptions = "-B /scratch/${PROJECT_ID}:/scratch/${PROJECT_ID},/project/${PROJECT_ID}:/project/${PROJECT_ID},/pfs/lustrep4/projappl/${PROJECT_ID}:/pfs/lustrep4/projappl/${PROJECT_ID},/pfs/lustrep4/scratch/${PROJECT_ID}:/pfs/lustrep4/scratch/${PROJECT_ID}"
-            errorStrategy = 'ignore' // ignore,terminate
+            containerOptions = "-B /scratch/project_465000191:/scratch/project_465000191,/project/project_465000191:/project/project_465000191,/pfs/lustrep4/projappl/project_465000191:/pfs/lustrep4/projappl/project_465000191,/pfs/lustrep4/scratch/project_465000191:/pfs/lustrep4/scratch/project_465000191"
+            errorStrategy = 'terminate' // ignore,terminate
             queue = 'small'
             withName:map_to_reference {
-                cpus = 16
+                cpus = 4
            }
             withName:ena_analysis_submit {
-                cpus = 16
+                cpus = 4
             }
         }
         executor {
             name = 'hq'
-            queueSize = 200 //100*SLURM_NNODES
-            cpus = 64 //16*SLURM_NODES
+            queueSize = 1200 //100*SLURM_NNODES
+            cpus = 48 //NUM_CPUs*SLURM_NODES (4x12)
             submitRateLimit = '2000 second'
+            time = '1h'
         }
     }
 }
