--- a/.github/workflows/aws-batch-head.yml
+++ b/.github/workflows/aws-batch-head.yml
@@ -17,8 +17,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: quay.io
-          # username: ${{ secrets.QUAY_USERNAME }}
-          # password: ${{ secrets.QUAY_PASSWORD }}
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
