--- a/.github/workflows/aws-batch-head.yml
+++ b/.github/workflows/aws-batch-head.yml
@@ -10,9 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Login to Quay.io
         uses: docker/login-action@v2
         with:
@@ -20,12 +20,14 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           push: true
           context: "{{defaultContext}}:aws-batch"
-          file: aws-batch/Dockerfile
+          # file: aws-batch/Dockerfile
           tags: quay.io/enasequence/ena-sars-cov2-aws-batch-head:${{ env.IMG_TAG }}
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GH_TOKEN }}
       # - name: Build the image
       #   run: |
       #     docker build -t quay.io/enasequence/ena-sars-cov2-aws-batch-head:$IMG_TAG .
