--- a/.github/workflows/aws-batch-head.yml
+++ b/.github/workflows/aws-batch-head.yml
@@ -9,6 +9,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: amazoncorretto:17
+      options: --user root
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker
