try inject env var to worker

--- a/illumina/env.yaml
+++ b/illumina/env.yaml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - procps-ng=3.3.17 # nf-tower
   - wget=1.20.3
+  - curl=7.87.0
   - python=3.7
   - bwa=0.7.17
   - samtools=1.10-0
