--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -87,6 +87,7 @@ profiles {
         env {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
+            DD_API_KEY = "${DD_API_KEY}"
         }
         process {
             executor = 'awsbatch'
