--- a/.github/workflows/aws-batch-head.yml
+++ b/.github/workflows/aws-batch-head.yml
@@ -3,7 +3,7 @@ name: deploy_aws_batch_head_docker_image
 on:
   push:
     branches:
-      - gh-action
+      - master
 env:
   IMG_TAG: 1.0
 jobs:
