--- a/.github/workflows/aws-batch-head.yml
+++ b/.github/workflows/aws-batch-head.yml
@@ -3,7 +3,7 @@ name: deploy_aws_batch_head_docker_image
 on:
   push:
     branches:
-      - master
+      - gh-action
 env:
   IMG_TAG: 1.0
 jobs:
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Login to Quay.io
         uses: docker/login-action@v2
         with:
@@ -24,4 +26,5 @@ jobs:
         with:
           push: true
           context: "{{defaultContext}}:aws-batch"
-          tags: quay.io/enasequence/ena-sars-cov2-aws-batch-head:${{ env.IMG_TAG }}
+          tags: quay.io/enasequence/ena-sars-cov2-aws-batch-head:${{ env.RELEASE_VERSION }}
+          # tags: quay.io/enasequence/ena-sars-cov2-aws-batch-head:${{ env.IMG_TAG }}
