add gcloud log pipeline

--- a/aws-batch/Dockerfile
+++ b/aws-batch/Dockerfile
@@ -15,5 +15,5 @@ RUN curl -s https://get.nextflow.io | bash \
 ARG DIR="/scratch/covid-sequence-analysis-workflow"
 RUN mkdir -p $DIR
 WORKDIR "$DIR"
-RUN git clone -b "datadog" https://github.com/enasequence/covid-sequence-analysis-workflow $DIR
+RUN git clone -b "logging" https://github.com/enasequence/covid-sequence-analysis-workflow $DIR
 CMD ["${DIR}/run.nextflow.sh"]
