update push log

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -88,6 +88,7 @@ profiles {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
             DD_API_KEY = "${DD_API_KEY}"
+            PROFILE = "awsbatch"
         }
         process {
             executor = 'awsbatch'
