Cleanup and add googleBatch to nextflow.config

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -53,7 +53,7 @@ profiles {
             queueSize = '100'
             submitRateLimit = '2000 second'
         }
-        google {
+        google {                                                                                                                                                                                                                    [32/1144]
             lifeSciences {
                 preemptible = 'true'
                 //usePrivateAddress = 'false'     // public IP is required unless everything is on GCP
@@ -61,27 +61,11 @@ profiles {
             location = 'europe-west4'
             region = 'europe-west4'
             project = 'prj-int-dev-covid19-nf-gls'
-//            enableRequesterPaysBuckets = 'false'
         }
-//        tower {
-//            workspaceId = 'xxxxx' // TOWER Workspace ID for POC 
-//        }
-//        timeline {
-//            enabled = 'true'
-//            file = 'timeline.html'
-//        }
-//        dag {
-//            enabled = 'true'
-//            file = 'flowchart.png'
-//        }
-        // report {
-        //     enabled = 'true'
-        //     overwrite = 'true'
-        // }
-        // trace {
-        //     enabled = 'true'
-        //     overwrite = 'true'
-        // }
+        tower {
+            //accessToken = ''
+            workspaceId = '236739176715692'
+        }
     }
     awsbatch {
         env {
@@ -111,12 +95,54 @@ profiles {
         aws {
             batch {
                 // NOTE: this setting is only required if the AWS CLI tool is installed in a custom AMI
-                cliPath = '/home/ec2-user/miniconda/bin/aws' // Need to (manually) create custom AMI first to access this folder 
+                cliPath = '/home/ec2-user/miniconda/bin/aws' // Need to (manually) create custom AMI first to access this folder
             }
             region = 'eu-west-2'
         }
         tower {
             workspaceId = '236739176715692'
+        }
+    }
+    googleBatch {
+        params {
+            SARS2_FA = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa"
+            SARS2_FA_FAI = "gs://prj-int-dev-covid19-nf-gls/data/NC_045512.2.fa.fai"
+            SECRETS = "gs://prj-int-dev-covid19-nf-gls/data/projects_accounts.csv"
+        }
+        env {
+            NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB
+            NXF_DEBUG = '0'
+        }
+        process {
+            executor = 'google-batch'
+            container = 'quay.io/nextflow/bash'
+            disk = '10 GB'
+            errorStrategy = 'ignore'
+            withName:map_to_reference {
+                cpus = 2
+                memory = '8 GB'
+            }
+            withName:ena_analysis_submit {
+                cpus = 2
+                memory = '2 GB'
+            }
+        }
+        executor {
+            queueSize = '100'
+            submitRateLimit = '2000 second'
+        }
+        google {
+            lifeSciences {
+                preemptible = 'true'
+                //usePrivateAddress = 'false'     // public IP is required unless everything is on GCP
+            }
+            location = 'europe-west4'
+            region = 'europe-west4'
+            project = 'prj-int-dev-covid19-nf-gls'
+        }
+        tower {
+                //accessToken = ''
+                workspaceId = '236739176715692'
         }
     }
 }
