--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -42,6 +42,7 @@ profiles {
         env {
             NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
             NXF_DEBUG = '0'
+            PROFILE = "gls"
         }
         process {
             executor = 'google-lifesciences'
@@ -63,9 +64,9 @@ profiles {
             project = 'prj-int-dev-covid19-nf-gls'
 //            enableRequesterPaysBuckets = 'false'
         }
-//        tower {
-//            workspaceId = 'xxxxx' // TOWER Workspace ID for POC 
-//        }
+        tower {
+            workspaceId = '236739176715692'
+        }
 //        timeline {
 //            enabled = 'true'
 //            file = 'timeline.html'
