add gcp logging

--- a/illumina/env.yaml
+++ b/illumina/env.yaml
@@ -4,8 +4,11 @@ channels:
   - bioconda
 dependencies:
   - procps-ng=3.3.17 # nf-tower
+  - google-cloud-sdk=434.0.0
   - wget=1.20.3
-  - python=3.7
+  - curl=7.87.0
+  - jq=1.6
+  - python=3.8
   - bwa=0.7.17
   - samtools=1.10-0
   - bcftools=1.10-2
