--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -42,6 +42,7 @@ profiles {
         env {
             NXF_OPTS = '-Xms500m -Xmx3584m'       // 500MB to 3.5GB
             NXF_DEBUG = '0'
+            PROFILE = "gls"
         }
         process {
             executor = 'google-lifesciences'
@@ -87,6 +88,7 @@ profiles {
         env {
             NXF_OPTS = '-Xms500m'       // '-Xmx500m'
             NXF_DEBUG = '0'
+            PROFILE = "awsbatch"
         }
         process {
             executor = 'awsbatch'
