Include spot instance use for GCP Batch

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -53,7 +53,7 @@ profiles {
             queueSize = '100'
             submitRateLimit = '2000 second'
         }
-        google {                                                                                                                                                                                                                    [32/1144]
+        google {
             lifeSciences {
                 preemptible = 'true'
                 //usePrivateAddress = 'false'     // public IP is required unless everything is on GCP
@@ -135,6 +135,9 @@ profiles {
             location = 'europe-west4'
             region = 'europe-west4'
             project = 'prj-int-dev-covid19-nf-gls'
+            batch {
+                spot = 'true'
+            }
         }
         tower {
                 //accessToken = ''
