add profile env

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -34,6 +34,9 @@ profiles {
 //        }
     }
     codonslurm {
+        env {
+            PROFILE = "codonslurm"
+        }
         cleanup = true
         singularity {
             enabled = true
