add tower workspace id

--- a/nextflow-lib/nextflow.config
+++ b/nextflow-lib/nextflow.config
@@ -61,6 +61,9 @@ profiles {
             queueSize = '100' //'100'
             submitRateLimit = '2000 second'
         }
+        tower {
+            workspaceId = '236739176715692'
+        }
     }
     gls {
         params {
